@@ -1,1 +1,1 @@
- <input type="button" value="{WALLET_NAME}" onclick="switchwallet('{WALLET_NAME}')">
+ <input title="Loading a new wallet may take a few seconds" type="button" value="{WALLET_NAME}" onclick="switchwallet('{WALLET_NAME}')">
